--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-toastify": "^10.0.5"
+    "react-markdown": "^9.0.1",
+    "react-toastify": "^10.0.5",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
