--- a/package.json
+++ b/package.json
@@ -1,35 +1,72 @@
 {
 
   "name": "web-client",
+
   "version": "0.1.0",
+
   "private": true,
+
   "scripts": {
+
     "dev": "next dev",
+
     "build": "next build",
+
     "start": "next start",
+
     "lint": "next lint"
+
   },
+
   "dependencies": {
+
     "bcryptjs": "^2.4.3",
+
     "jose": "^5.8.0",
+
     "jsonwebtoken": "^9.0.2",
+
     "next": "14.2.7",
+
     "next-client-cookies": "^1.1.1",
+
     "react": "^18",
+
     "react-dom": "^18",
+
     "react-infinite-scroll-component": "^6.1.0",
-    "react-toastify": "^10.0.5"
+
+    "react-markdown": "^9.0.1",
+
+    "react-toastify": "^10.0.5",
+
+    "remark-gfm": "^4.0.0"
+
   },
+
   "devDependencies": {
+
     "@types/bcryptjs": "^2.4.6",
+
     "@types/jsonwebtoken": "^9.0.6",
+
     "@types/node": "^20",
+
     "@types/react": "^18",
+
     "@types/react-dom": "^18",
+
     "eslint": "^8",
+
     "eslint-config-next": "14.2.7",
+
     "postcss": "^8",
+
     "tailwindcss": "^3.4.1",
+
     "typescript": "^5"
+
   }
+
 }
+
