--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
 
     "react-markdown": "^9.0.1",
 
+    "react-share": "^5.1.0",
+
     "react-toastify": "^10.0.5",
 
     "remark-gfm": "^4.0.0"
