--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 
     "@react-oauth/google": "^0.12.1",
 
+    "@talkjs/react": "^0.1.9",
+
     "bcryptjs": "^2.4.3",
 
     "jose": "^5.8.0",
@@ -44,7 +46,9 @@
 
     "react-toastify": "^10.0.5",
 
-    "remark-gfm": "^4.0.0"
+    "remark-gfm": "^4.0.0",
+
+    "talkjs": "^0.25.0"
 
   },
 
